# rt-5gms-application-function

./: .gitignore  .gitmodules  ATTRIBUTION_NOTICE  README.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml
docs/: features.md
examples/: Certificates.json  ConsumptionReportingConfiguration.json  ContentHostingConfiguration_AMP-Samples_pull-ingest.json  ContentHostingConfiguration_AMP-Samples_pull-ingest_http_and_https.json.tmpl  ContentHostingConfiguration_AMP-Samples_pull-ingest_https.json.tmpl  ContentHostingConfiguration_Big-Buck-Bunny_pull-ingest.json  ContentHostingConfiguration_Big-Buck-Bunny_pull-ingest_domain-name_http.json  ContentHostingConfiguration_Big-Buck-Bunny_pull-ingest_domain-name_http_and_https.json  ContentHostingConfiguration_Big-Buck-Bunny_pull-ingest_http_and_https.json  ContentHostingConfiguration_Big-Buck-Bunny_pull-ingest_http_and_https.json.tmpl  ContentHostingConfiguration_Big-Buck-Bunny_pull-ingest_https.json  ContentHostingConfiguration_Big-Buck-Bunny_pull-ingest_https.json.tmpl  ContentHostingConfiguration_Big-Buck-Bunny_pull-ingest_v17.4.0.json  ContentHostingConfiguration_Elephants-Dream_pull-ingest.json  ContentHostingConfiguration_Elephants-Dream_pull-ingest_http_and_https.json.tmpl  ContentHostingConfiguration_Elephants-Dream_pull-ingest_https.json.tmpl  ContentHostingConfiguration_Llama-Drama_pull-ingest.json  ContentHostingConfiguration_Llama-Drama_pull-ingest_http_and_https.json.tmpl  ContentHostingConfiguration_Llama-Drama_pull-ingest_https.json.tmpl  PolicyTemplate-1.json  PolicyTemplate-1b.json  PolicyTemplate-2.json  README.md  Test_http_canonical-msaf.yaml  Test_http_domain_alias-msaf.yaml  Test_https_canonical-msaf.yaml  Test_https_domain_alias-msaf.yaml  certmgr  sample.yaml
lib/: meson.build
lib/bsf/: bsf-client-sess.c  bsf-client-sess.h  bsf-client.c  bsf-client.h  bsf-configuration.c  bsf-configuration.h  context.c  context.h  local.c  local.h  log.c  log.h  meson.build  nbsf-management-build.c  nbsf-management-build.h  nbsf-process.c  nbsf-process.h  pcf-bind.c  pcf-bind.h  pcf-bindings-cache.c  pcf-bindings-cache.h  utils.c  utils.h
lib/tests/: meson.build
lib/tests/bsf/: abts-main.c  bsf-config.c  bsf-test-context.c  bsf-test-context.h  bsf-test-event.c  bsf-test-event.h  bsf-test-local.c  bsf-test-local.h  bsf-test-sbi.h  bsf-test-sm.c  bsf-test-sm.h  bsf-test.c  bsf-test.h  meson.build
src/: meson.build
src/5gmsaf/: .gitignore  ContentProtocolsDiscovery_body.json  af-sm-msaf.c  app.c  application-server-context.c  application-server-context.h  application-server.c  application-server.h  certmgr  certmgr.c  certmgr.h  consumption-report-configuration.c  consumption-report-configuration.h  context.c  context.h  data-collection.c  data-collection.h  dynamic-policy.c  dynamic-policy.h  event.c  event.h  fix_openapi_yaml.py  generator-5gmsaf  hash.c  hash.h  headers.c  headers.h  init.c  init.h  local.c  local.h  media-player-entry.c  media-player-entry.h  media-player.c  meson.build  metrics-reporting-configuration-provisioning.c  metrics-reporting-configuration-provisioning.h  metrics-reporting-configuration.c  metrics-reporting-configuration.h  metrics-reporting-provisioning.c  (+42 more)
src/5gmsaf/5G_APIs-overrides/: TS26512_M1_MetricsReportingProvisioning.yaml  TS26512_M5_DynamicPolicies.yaml
src/5gmsaf/openapi-extra-yaml/: Maf_Management.yaml
src/5gmsaf/openapi-templates/: api-info-head.mustache  model-body.mustache  model-header.mustache
subprojects/: .gitignore  open5gs.wrap  patch_open5gs.sh  rt-5gc-service-consumers.wrap
subprojects/packagefiles/: open5gs.patch
systemd/: 5gms-application-function.service.in  90-5gms-application-function.preset  meson.build
tests/: meson.build
tests/msaf/: abts-main.c  meson.build  pcf-cache-test.c  pcf-cache-test.h  sai-cache-test.c  sai-cache-test.h  tests.c  tests.h  utilities-test.c  utilities-test.h
tools/: meson.build
tools/bash/: certmgr  le-certmgr
tools/python3/: m1_client_cli.py  m1_session_cli.py  m1_sync_config.py  pylint.rc
tools/python3/lib/rt_m1_client/: certificates.py  client.py  configuration.py  data_store.py  exceptions.py  session.py  types.py
tools/python3/lib/rt_m1_client/certificates/: __init__.py  acme_cert_signer.py  base.py  local_ca_cert_signer.py
